# bazel-go-genproto-issue

./: BUILD.bazel  WORKSPACE  go.mod  go.sum  main.go
bazel/: deps.bzl
